# plume-plugin-extreme-events

./: .gitignore  CMakeLists.txt  README.md
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: ci.yml
data/: plume-config.yml
docs/: CMakeLists.txt  Doxyfile
docs/pages/: index.md
nwp_emulator/: CMakeLists.txt  emulator_config.json  nwp_emulator.cc  nwp_emulator.h  nwp_utils.cc  nwp_utils.h
scripts/: CMakeLists.txt  emulate_ee_detection.cc  emulate_ee_detection.sh.in  notify_aviso.cc
src/: CMakeLists.txt  ee_plugin.cc  ee_plugin.h  ee_plugin_registration.cc  git_sha1.h.in  healpix_utils.cc  healpix_utils.h  notification.cc  notification.h  plugin_types.h  version.h.in
src/ee_registry/: README.md  ee_base.h  ee_registry.cc  ee_registry.h  extreme_wind.cc  extreme_wind.h  storm.cc  storm.h  wind_drought.cc  wind_drought.h
test/: CMakeLists.txt  test_ee_plugin.cc
tests/: CMakeLists.txt  test_ee_plugin.cc
tests/data/: emulator_config.yml  plume_config.yml
